Bug 489985 - Replace new Integer() with Integer.valueOf() in org.eclipse.releng.tools
Change-Id: Ia6eaf822dc2c473bd7ab4f2fae5b36056fcb07e4
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>